Metallica page done

--- a/html/metal.html
+++ b/html/metal.html
@@ -98,7 +98,7 @@
 	</section>
 	
 	<! ----- footer section>
-	<footer> 2021© Antonov A.D. IKBO-02-20 </footer>
+	<footer> 2021© Антонов А.Д. --- Группа ИКБО-02-20 </footer>
 </body>
 
 
