--- a/html/electronic.html
+++ b/html/electronic.html
@@ -87,7 +87,7 @@
 	</section>
 	</section>
 	<! ----- footer section>
-	<footer> 2021© Antonov A.D. IKBO-02-20 </footer>
+	<footer> 2021© Антонов А.Д. --- Группа ИКБО-02-20 </footer>
 </body>
 
 
