Fixed missing href

--- a/html/electronic.html
+++ b/html/electronic.html
@@ -17,7 +17,7 @@
 		<nav>
 			<a href="metal.html">Метал</a>
 			<a href="electronic.html">Электронная музыка</a>
-			<a> Lorem ipsum</a>
+			<a href="metallica.html">Metallica</a>
 		</nav>
 	</header>
 	
