--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav>
 			<a href="html/metal.html">Метал</a>
 			<a href="html/electronic.html">Электронная музыка</a>
-			<a> Lorem ipsum</a>
+			<a href="html/metallica.html">Metallica</a>
 		</nav>
 	</header>
 	
