Mobile view fix fix

--- a/html/metal.html
+++ b/html/metal.html
@@ -40,8 +40,8 @@
 				Metallica – американская метал-группа, образованная в 1981 году. На данный момент группа выпустила десять студийных альбомов. Metallica оказала большое влияние на развитие метала и входит в «большую четвёрку трэш-метала» вместе с группами Slayer, Megadeth и Anthrax. Альбомы Metallica были проданы в общей сложности в количестве более 110 миллионов экземпляров по всему миру, что делает её одним из самых коммерчески успешных металлических коллективов. В текущий состав группы входят вокалист и гитарист Джеймс Хетфилд, барабанщик Ларс Ульрих, гитарист Кирк Хэммет и басист Роберт Трухильо.
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/ph_megadeth.jpg" alt="photo">
 				<h2> Megadeth </h2>
 			</div>
@@ -58,8 +58,8 @@
 				Avenged Sevenfold – американская метал-группа, образованная в 1999 году, считается одной из групп-лидеров новой волны американского хэви-метала. В текущий состав входят вокалист М. Шэдоус, ритм-гитарист Заки Вэндженс, ведущйи гитарист Синистер Гейтс, басист Джонни Крайст и барабанщик Брукс Вакерман. На сегодняшний день Avenged Sevenfold выпустили семь студийных альбомов, один концертный альбом и двадцать пять синглов. Первые два студийных альбома (Sounding the Seventh Trumpet и Waking the Fallen) были записаны в стиле металкор, третий (City of Evil) и последующие – ближе к звучанию классического хеви-метала.
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/ph_maiden.jpg" alt="photo">
 				<h2> Iron Maiden </h2>
 			</div>
@@ -76,8 +76,8 @@
 				Black Sabbath – британская рок-группа, образованная в Бирмингеме, Англия, в 1968 году и оказавшая значительное влияние на развитие рок-музыки, прежде всего, хеви-метала. Дебютный альбом Black Sabbath считается одним из первых хеви-метал-альбомов, заложившим, кроме того, фундамент и для последующего развития дум-метала. В первоначальный состав группы входили Оззи Осборн, Тони Айомми, Гизер Батлер и Билл Уорд. Состав постоянно менялся, в группе успели поучаствовать более двадцати музыкантов, включая Ронни Джеймса Дио, Тони Мартина и Джеффа Николлса. Участники группы образовали такие проекты как Dio, GZR, Heaven and Hell.
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/ph_sabaton.jpg" alt="photo">
 				<h2> Sabaton </h2>
 			</div>
