--- a/html/metallica.html
+++ b/html/metallica.html
@@ -39,12 +39,12 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../logos/lg_ride_the_lightning.jpg" alt="photo">
 			</div>
 			<div class="card-txt">
-				<h2 style="text-align: right"> Ride The Lightning </h2>
+				<h2> Ride The Lightning </h2>
 				Ride the Lightning — второй студийный альбом трэш-метал группы Metallica. Хотя в плане звучания альбом опирался на традиции трэш-метала, он также продемонстрировал творческий рост группы и разнообразие музыкального материала. Частично этому способствовал опыт бас-гитариста Клиффа Бёртона, который имел классическое музыкальное образование и в этот раз принимал большее участие в написании песен. При этом музыканты не делали основной упор на скорости мелодий, группа стремилась развить звучание, добавляя акустические гитары, глубокие инструментальные пассажи и более сложные музыкальные гармонии. Кроме того, это последний альбом Metallica, содержащий песни за авторством бывшего гитариста группы Дэйва Мастейна.
 			</div>
 		</div>
@@ -59,12 +59,12 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../logos/lg_and_justice_for_all.jpg" alt="photo">
 			</div>
 			<div class="card-txt">
-				<h2 style="text-align: right"> ...And Justice For All </h2>
+				<h2> ...And Justice For All </h2>
 				…And Justice for All — четвёртый студийный альбом американской трэш-метал-группы Metallica. Это был первый полноформатный альбом группы, в записи которого участвовал бас-гитарист Джейсон Ньюстед, сменивший трагически погибшего в 1986 году Клиффа Бёртона. Музыкальное содержание альбома представляет собой материал с более прогрессивной структурой, базирующийся на длинных и сложных мелодиях композиций, исполненных в быстром темпе и содержащих небольшое количество классических куплетных форм, нежели в двух предыдущих. Лейтмотив альбома объединён единой концептуальной основой, базирующейся на теме политической и правовой несправедливости, которая формируется благодаря сюжетам отдельных песен: войне, цензуре и ядерному противостоянию.
 			</div>
 		</div>
@@ -79,12 +79,12 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../logos/lg_load.jpg" alt="photo">
 			</div>
 			<div class="card-txt">
-				<h2 style="text-align: right"> Load </h2>
+				<h2> Load </h2>
 				Load — шестой студийный альбом американской метал-группы Metallica, выход которого состоялся в июне 1996 года на лейбле Elektra Records в Соединенных Штатах и на Vertigo Records международно. Выход альбома Load ознаменовал собой отход от стиля трэш-метал в сторону хард-рока, что сильно разочаровало некоторых поклонников группы. Load получил неоднозначные отзывы от критиков, но имел коммерческий успех, дебютировав на первом месте американского чарта Billboard 200. За первую неделю было продано 680 000 копий, что сделало альбом самым успешным дебютом 1996 года. На альбоме практически отсутствуют элементы трэш-метала — стиля, которого группа придерживалась на всех своих предыдущих альбомах. Вместо этого на альбоме представлены композиции жанров хард-рок, хеви-метал и даже блюз-рок.
 			</div>
 		</div>
@@ -99,12 +99,12 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../logos/lg_st_anger.jpg" alt="photo">
 			</div>
 			<div class="card-txt">
-				<h2 style="text-align: right"> St. Anger </h2>
+				<h2> St. Anger </h2>
 				St. Anger — восьмой студийный альбом американской рок-группы Metallica, выпущенный 5 июня 2003 года. Последний релиз группы, выпущенный на лейблах Elektra и Vertigo Records. Также последний релиз, который продюсировал Боб Рок, чья работа с Metallica начиналась с пятого одноимённого студийного альбома. Записи альбома предшествовал уход басиста Джейсона Ньюстеда и курс реабилитации Джеймса Хетфилда, после которого он работал в группе по четыре часа в день. Музыкальный стиль альбома St. Anger сильно отличается от предыдущих альбомов Metallica, в связи со «стальным» звучанием ударных, пониженным гитарным строем на 2 тона и отсутствием гитарных соло, а также сырым звучанием альбома в целом. St. Anger получил смешанные отзывы от критиков.
 			</div>
 		</div>
@@ -119,12 +119,12 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../logos/lg_hardwired.jpg" alt="photo">
 			</div>
 			<div class="card-txt">
-				<h2 style="text-align: right"> Hardwired... To Self-Destruct </h2>
+				<h2> Hardwired... To Self-Destruct </h2>
 				Hardwired… To Self-Destruct (с англ. — «Создан... для самоуничтожения») — десятый студийный альбом американской группы Metallica, выпущенный 18 ноября 2016 года. Это первый их студийный альбом за восемь лет. Продюсером альбома стал Грег Фидельман, работавший над предыдущим альбомом группы. Альбом состоит из двенадцати композиций на двух дисках, на все песни альбома сняты видеоклипы. Стиль альбома чуть менее быстрый, чем Death Magnetic, в нем преобладают негативные настроения и темы, за исключением композиции Halo on Fire.
 			</div>
 		</div>
