--- a/html/electronic.html
+++ b/html/electronic.html
@@ -39,8 +39,8 @@
 				Carpenter Brut — синтвейв-проект французского музыканта Фрэнка Уэзо. Мировую известность приобрёл после выхода игры Hotline Miami 2, в создании саундтрека к которой принял участие. Для музыки Carpenter Brut характерно сильное влияние метала: во многих песнях появляются «живые» ударные и электрогитара. Фрэнк отмечает, что «чистая» электроника не удовлетворила его как недостаточно энергичная, поэтому он позаимствовал некоторые приемы тяжелых жанров. В турах к Фрэнку присоединяются Адриан Гроссет и Флорент Маркадет из французской группы Hacride, играющие на электрогитаре и ударных соответственно.
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/el_frank_klepacki.png" alt="photo">
 				<h2> Frank Klepacki </h2>
 			</div>
@@ -57,8 +57,8 @@
 				Мик Гордон — австралийский композитор и саунд-дизайнер, пишущий музыку преимущественно для компьютерных игр. Начал работу на Pandemic Studios, затем работал на MachineGames, id Software, Arkane Studios, Slightly Mad Studios. Среди его работ саундреки для игр из серий Need for Speed, Wolfenstein: The New Order и The Old Blood, Wolfenstein II: The New Colossus, а также Doom, и Doom Eternal. За музыку к Doom Гордон получил ряд наград, в том числе награду церемонии награждения The Game Awards, а также номинировался на Премию Британской Академии в области видеоигр в категории «Лучшая музыка».
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/el_perturbator.png" alt="photo">
 				<h2> Perturbator </h2>
 			</div>
@@ -75,8 +75,8 @@
 				Эмерик Левардон – малоизвестный французский электронный музыкант, пишущий музыку в жанре синтвейв. Первый релиз под псевдонимом Hollywood Burns – сингл Californian Nightmare – он выпустил в декабре 2015 года. В августе 2016-го выходит его мини-альбом First Contact EP. Также Эмерик выпустил два полноценных альбома – Invaders (2018) и The Age of the Saucers (2021).
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-ph" style="order: 2">
+		<div class="card" id="even">
+			<div class="card-ph">
 				<img src="../photos/el_tangerine_dream.png" alt="photo">
 				<h2> Tangerine Dream </h2>
 			</div>
