--- a/html/metal.html
+++ b/html/metal.html
@@ -9,7 +9,6 @@
 <link rel="stylesheet" href="../css/metal.css">
 </head>
 
-<! img src="../media/bg_image1.jpg" alt="Background Image" id="bg-image">
 	
 <body>
 	<! ----- header section>
@@ -19,6 +18,7 @@
 			<a href="metal.html">Метал</a>
 			<a href="electronic.html">Электронная музыка</a>
 			<a href="metallica.html">Metallica</a>
+			<a href="quiz.html">Викторина</a>
 		</nav>
 	</header>
 	
