--- a/html/quiz.html
+++ b/html/quiz.html
@@ -4,8 +4,9 @@
 
 <head>
 <meta charset="utf-8">
-<title>World of Music</title>
-<link rel="stylesheet" href="css/style.css">
+<title>World of Music - Quiz</title>
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/quiz.css">
 </head>
 
 
@@ -14,10 +15,10 @@
 	<header>
 		<a href="index.html"><h1>Мир Музыки</h1></a>
 		<nav>
-			<a href="html/metal.html">Метал</a>
-			<a href="html/electronic.html">Электронная музыка</a>
-			<a href="html/metallica.html">Metallica</a>
-			<a href="html/quiz.html">Викторина</a>
+			<a href="metal.html">Метал</a>
+			<a href="electronic.html">Электронная музыка</a>
+			<a href="metallica.html">Metallica</a>
+			<a href="quiz.html">Викторина</a>
 		</nav>
 	</header>
 	
@@ -26,13 +27,17 @@
 	<section id="desc">
 
 	</section>
+		<div id="quiz"></div>
+		<button id="submit">Get Results</button>
+		<div id="results"></div>
 	<section id="wrapper">
-		
+
 	</section>
 	</section>
 	
 	<! ----- footer section>
 	<footer> 2021© Антонов А.Д. --- Группа ИКБО-02-20 </footer>
+	<script src="../js/quiz.js"></script>
 </body>
 
 
