--- a/html/metallica.html
+++ b/html/metallica.html
@@ -18,6 +18,7 @@
 			<a href="metal.html">Метал</a>
 			<a href="electronic.html">Электронная музыка</a>
 			<a href="metallica.html">Metallica</a>
+			<a href="quiz.html">Викторина</a>
 		</nav>
 	</header>
 	
