Title page href fix

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -13,7 +13,7 @@
 <body>
 	<! ----- header section>
 	<header>
-		<a href="index.html"><h1>Мир Музыки</h1></a>
+		<a href="../index.html"><h1>Мир Музыки</h1></a>
 		<nav>
 			<a href="metal.html">Метал</a>
 			<a href="electronic.html">Электронная музыка</a>
