--- a/html/electronic.html
+++ b/html/electronic.html
@@ -5,6 +5,7 @@
 <head>
 <meta charset="utf-8">
 <title>World of Music - Electronic</title>
+<link rel="icon" type="image/x-icon" href="../logos/favicon.png">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/electronic.css">
 </head>
